Fixed footer alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,9 @@ html, body {
   font-family: "Lexend Deca", sans-serif;
   font-weight: 300;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header, .footer{
